[gd_scene load_steps=10 format=3 uid="uid://ceukbgaycvsmv"]

[ext_resource type="Theme" uid="uid://0v5t0uvnmwop" path="res://themes/default_theme.tres" id="1_7x3g4"]
[ext_resource type="FontFile" uid="uid://d1bm44jmexd52" path="res://themes/fonts/Poppins/Poppins-Regular.ttf" id="2_r571i"]
[ext_resource type="Script" path="res://pages/calendar/calendar_elements/day_poops_popup/day_poops_popup.gd" id="2_tt31v"]
[ext_resource type="Texture2D" uid="uid://co5iga8mwdejj" path="res://global_assets/left_line.svg" id="3_ej3q4"]
[ext_resource type="PackedScene" uid="uid://7lpibcydi6nd" path="res://pages/calendar/calendar_elements/day_poops_popup/day_poop.tscn" id="4_r7766"]
[ext_resource type="PackedScene" uid="uid://c2xroh7k04rcu" path="res://pages/calendar/calendar_elements/day_poops_popup/bottom_poop.tscn" id="11_vbr2p"]

[sub_resource type="Gradient" id="Gradient_nbwbh"]
offsets = PackedFloat32Array(0.403756)
colors = PackedColorArray(0, 0, 0, 0.5)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_47kjo"]
gradient = SubResource("Gradient_nbwbh")
width = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wwpb"]
bg_color = Color(0.0823529, 0.0823529, 0.0823529, 1)
corner_radius_top_left = 40
corner_radius_top_right = 40
corner_radius_bottom_right = 40
corner_radius_bottom_left = 40

[node name="DayPoopsPopup" type="ScrollContainer"]
top_level = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 0
theme = ExtResource("1_7x3g4")
horizontal_scroll_mode = 3
vertical_scroll_mode = 3
script = ExtResource("2_tt31v")
day_poop = ExtResource("4_r7766")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CloseButton" type="TextureButton" parent="MarginContainer"]
layout_mode = 2
texture_normal = SubResource("GradientTexture1D_47kjo")
ignore_texture_size = true
stretch_mode = 0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer"]
custom_minimum_size = Vector2(1080, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/CenterContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_6wwpb")

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/CenterContainer/MarginContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/margin_left = 60
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 60
theme_override_constants/margin_bottom = 30

[node name="MarginContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="DayMonthLabel" type="Label" parent="MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.376471, 0.376471, 0.376471, 1)
theme_override_fonts/font = ExtResource("2_r571i")
theme_override_font_sizes/font_size = 40
text = "01 Janvier"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer2/MarginContainer"]
custom_minimum_size = Vector2(0, 55.125)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer2/MarginContainer/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12

[node name="LeftLine" type="TextureRect" parent="MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer2/MarginContainer/HBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_ej3q4")
expand_mode = 1

[node name="PoopsContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2

[node name="BottomPoop" parent="MarginContainer/CenterContainer/MarginContainer/PanelContainer/MarginContainer2/MarginContainer" instance=ExtResource("11_vbr2p")]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="MarginContainer/CloseButton" to="." method="_on_close_pressed"]
